Change history
**************

1.0b2 (unreleased)
------------------

- Nothing changed yet.


1.0b1 (2012-05-31)
------------------

- Fixed the tests. [regebro]


1.0a1 (2012-05-29)
------------------

- Initial release